# data-mining-jeopardy

./: README.md  jeopardy_question_answers.txt  pom.xml
jeopardy_java_lucene/: pom.xml
jeopardy_java_lucene/src/main/java/core/: CustomDocument.java
jeopardy_python_huggingface/: app.py  demo.mkv  inference.py  project.txt  pyproject.toml  qdrant_ingest.py
src/main/java/core/: Main.java  PreProcessor.java  Question.java
